# playwright-python-example

./: .gitignore  CNAME  Dockerfile.jenkins  Jenkinsfile  README.md  index.html  pyproject.toml
.github/workflows/: manual-test.yml  matrix.yml
12/: index.html
12/export/: influxDbData.txt
13/: index.html
13/export/: influxDbData.txt
14/: index.html
14/export/: influxDbData.txt
15/: index.html
15/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
15/widgets/: categories-trend.json  environment.json  executors.json  severity.json  status-chart.json  summary.json
16/: index.html
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: categories-trend.json  (+3 more)
24/: index.html
26/: index.html
27/: index.html
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: CartPage.py  CheckoutPage.py  LoginPage.py  ProductListPage.py  checkout_data.py  locators.py
tests/: .gitignore  conftest.py
utilities/: common.py
widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+116 files in other folders)
